# reliable-broadcast-protocols

./: .gitignore  Cargo.toml  README.md
benchmark/: .committee.json  README.md  addrbc_logs.txt  client.json  fabfile.py  genconfig  latencies.sh  longer_test_msgs.txt  requirements.txt  script.sh  settings.json  syncer  syncer.json  temp.sh
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  remote.py  temp  utils.py
consensus/: Cargo.toml
consensus/addrbc/: Cargo.toml
consensus/addrbc/src/: context.rs  msg.rs
consensus/addrbc/src/protocol/: echo.rs  init.rs  rbc_state.rs  ready.rs
consensus/avid/src/: context.rs  process.rs
consensus/avid/src/protocol/: ready.rs
consensus/borbc/: Cargo.toml
consensus/borbc/src/: context.rs  msg.rs  process.rs
consensus/borbc/src/protocol/: echo.rs  init.rs  mod.rs  rbc_state.rs  ready.rs  vote.rs
consensus/ccbrb/: Cargo.toml
consensus/ccbrb/src/: context.rs  msg.rs  process.rs
consensus/ccbrb/src/protocol/: echo.rs  init.rs  (+2 more)
consensus/ctrbc/: Cargo.toml
consensus/ctrbc/src/: context.rs  process.rs
consensus/ecc_rbc/src/: context.rs
consensus/rbc/: Cargo.toml
consensus/rbc/src/: context.rs
node/: Cargo.toml
node/src/: cli.yml  main.rs  syncer.rs
results_archive/: out.txt
scripts/: aggregate.py  aggregate_and_plot.py  aggregate_msg_sizes.py  check_key.sh  check_logs.sh  create_testdata.sh  data.txt  latencies.sh  multiple_runs.sh  plot_latencies_matplotlib.py  plot_latencies_matplotlib_log.py  plot_msg_size.py  rbc_results.txt  run_benchmarks.sh  test.sh
types/src/msg/: sync.rs
(+10 files in other folders)
