[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

bincode = "1"
config = { package = "config", git="https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}
types = { package = "types", git="https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}

bytes = "1.0"

rbc = {package = "rbc",path="../consensus/rbc"}
addrbc = {package = "addrbc",path="../consensus/addrbc"}
ccbrb = {package = "ccbrb", path="../consensus/ccbrb"}
ctrbc = {package = "ctrbc",path="../consensus/ctrbc"}
borbc = {package = "borbc", path="../consensus/borbc"}
consensus = { package = "consensus", path="../consensus"}

anyhow = "1"
clap = {version = "2", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"
log="*"
simple_logger="*"
fnv = "1.0.3"
signal-hook = "0"

network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }
async-trait = "0"
futures-util = "0"